# AnotherGameOfLife

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
doc/html/: Board_8hpp.html  Board_8hpp__dep__incl.map  Board_8hpp__dep__incl.md5  Board_8hpp__incl.map  Board_8hpp__incl.md5  Board_8hpp_source.html  GameOfLife_8hpp.html  GameOfLife_8hpp__incl.map  GameOfLife_8hpp__incl.md5  GameOfLife_8hpp_source.html  Parameters_8hpp.html  Parameters_8hpp__dep__incl.map  Parameters_8hpp__dep__incl.md5  Parameters_8hpp__incl.map  Parameters_8hpp__incl.md5  Parameters_8hpp_source.html  Renderer_8hpp.html  Renderer_8hpp__incl.map  Renderer_8hpp__incl.md5  Renderer_8hpp_source.html  annotated.html  classagof_1_1Board.html  classagof_1_1Graphics_1_1Renderer.html  classagof_1_1Parameters.html  classes.html  dir_000014_000010.html  dir_000015_000010.html  dir_000c007802b370c77f402acfc5312725.html  dir_2090ecb40b05c373627a93702df605d0.html  dir_31a6388add5bc983c413dc6705e1aedf.html  dir_31a6388add5bc983c413dc6705e1aedf_dep.map  dir_31a6388add5bc983c413dc6705e1aedf_dep.md5  dir_3f0b82577a558c33d086ef901190fd27.html  dir_43c68ee94419fc9e5012309f7bdac460.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_599cf694b0509a8e3ed119e86bb8feda.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  (+28 more)
doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
inc/GameOfLife/: Board.hpp  GameOfLife.hpp  Parameters.hpp
inc/GameOfLife/Graphics/: Renderer.hpp
src/: CMakeLists.txt  main.cpp
src/GameOfLife/: Board.cpp  Parameters.cpp
src/GameOfLife/Graphics/: NoxDisplay.cpp  Renderer.cpp  XDisplay.cpp
